--- a/envs/environment-cs506.yml
+++ b/envs/environment-cs506.yml
@@ -1,41 +1,255 @@
-name: cs506
+name: bf506-final-project-env
 channels:
   - conda-forge
+  - bioconda
   - defaults
 dependencies:
-  - python=3.11
-  - pip
-  - numpy=1.26
-  - pandas=2.2
-  - scipy=1.11
-  - scikit-learn=1.3
-  - statsmodels=0.14
-  - matplotlib=3.8
-  - seaborn=0.12
-  - plotly=5.16
-  - jupyterlab=4.3
-  - notebook=7.0
-  - ipywidgets=8.0
-  - geopandas=1.1
-  - shapely=2.0
-  - fiona=1.9
-  - pyproj=3.7
-  - rtree
-  - geoplot
-  - tqdm
-  - requests
-  - sqlalchemy
-  - psycopg2
-  - openpyxl
-  - xlrd
+  - _openmp_mutex=4.5=2_gnu
+  - _python_abi3_support=1.0=hd8ed1ab_2
+  - aiohappyeyeballs=2.6.1=pyhd8ed1ab_0
+  - aiohttp=3.13.1=py310h70ea87e_0
+  - aiosignal=1.4.0=pyhd8ed1ab_0
+  - anyio=4.11.0=pyhcf101f3_0
+  - asttokens=3.0.0=pyhd8ed1ab_1
+  - async-timeout=5.0.1=pyhd8ed1ab_1
+  - attrs=25.4.0=pyh71513ae_0
+  - aws-c-auth=0.9.1=hc6331ae_3
+  - aws-c-cal=0.9.2=hef2a5b8_1
+  - aws-c-common=0.12.4=hfd05255_0
+  - aws-c-compression=0.3.1=ha8a2810_6
+  - aws-c-event-stream=0.5.6=h9e52e59_3
+  - aws-c-http=0.10.4=hffefcd8_3
+  - aws-c-io=0.22.0=h20b9e97_1
+  - aws-c-mqtt=0.13.3=he28f3f4_6
+  - aws-c-s3=0.8.6=ha4cb493_5
+  - aws-c-sdkutils=0.2.4=ha8a2810_1
+  - aws-checksums=0.2.7=ha8a2810_2
+  - aws-crt-cpp=0.34.4=hc2cf59f_0
+  - aws-sdk-cpp=1.11.606=h296c955_4
+  - brotli=1.1.0=hfd05255_4
+  - brotli-bin=1.1.0=hfd05255_4
+  - brotli-python=1.1.0=py310h73ae2b4_4
+  - bzip2=1.0.8=h0ad9c76_8
+  - c-ares=1.34.5=h2466b09_0
+  - ca-certificates=2025.10.5=h4c7d964_0
+  - cairo=1.18.4=h5782bbf_0
+  - certifi=2025.10.5=pyhd8ed1ab_0
+  - cffi=2.0.0=py310h29418f3_1
+  - charset-normalizer=3.4.4=pyhd8ed1ab_0
+  - click=8.3.0=pyh7428d3b_0
+  - colorama=0.4.6=pyhd8ed1ab_1
+  - comm=0.2.3=pyhe01879c_0
+  - contourpy=1.3.2=py310hc19bc0b_0
+  - cpython=3.10.19=py310hd8ed1ab_2
+  - cycler=0.12.1=pyhd8ed1ab_1
+  - datasets=4.3.0=pyhcf101f3_0
+  - debugpy=1.8.17=py310h699e580_0
+  - decorator=5.2.1=pyhd8ed1ab_0
+  - dill=0.4.0=pyhd8ed1ab_0
+  - double-conversion=3.3.1=he0c23c2_0
+  - exceptiongroup=1.3.0=pyhd8ed1ab_0
+  - executing=2.2.1=pyhd8ed1ab_0
+  - filelock=3.20.0=pyhd8ed1ab_0
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=h77eed37_3
+  - fontconfig=2.15.0=h765892d_1
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=0
+  - fonttools=4.60.1=py310hdb0e946_0
+  - freetype=2.14.1=h57928b3_0
+  - frozenlist=1.7.0=py310had1666a_0
+  - fsspec=2025.9.0=pyhd8ed1ab_0
+  - graphite2=1.3.14=hac47afa_2
+  - h11=0.16.0=pyhd8ed1ab_0
+  - h2=4.3.0=pyhcf101f3_0
+  - harfbuzz=11.0.0=h9e37d49_0
+  - hf-xet=1.2.0=py310hfb9af98_0
+  - hpack=4.1.0=pyhd8ed1ab_0
+  - httpcore=1.0.9=pyh29332c3_0
+  - httpx=0.28.1=pyhd8ed1ab_0
+  - huggingface_hub=1.0.1=pyhd8ed1ab_0
+  - hyperframe=6.1.0=pyhd8ed1ab_0
+  - icu=75.1=he0c23c2_0
+  - idna=3.11=pyhd8ed1ab_0
+  - importlib-metadata=8.7.0=pyhe01879c_1
+  - ipykernel=7.0.1=pyh6dadd2b_0
+  - ipython=8.37.0=pyha7b4d00_0
+  - jedi=0.19.2=pyhd8ed1ab_1
+  - jinja2=3.1.6=pyhd8ed1ab_0
+  - joblib=1.5.2=pyhd8ed1ab_0
+  - jupyter_client=8.6.3=pyhd8ed1ab_1
+  - jupyter_core=5.9.1=pyh6dadd2b_0
+  - kiwisolver=1.4.9=py310h1e1005b_1
+  - krb5=1.21.3=hdf4eb48_0
+  - lcms2=2.17=hbcf6048_0
+  - lerc=4.0.0=h6470a55_1
+  - libabseil=20250512.1=cxx17_habfad5f_0
+  - libarrow=22.0.0=h2031902_0_cpu
+  - libarrow-acero=22.0.0=h7d8d6a5_0_cpu
+  - libarrow-compute=22.0.0=h2db994a_0_cpu
+  - libarrow-dataset=22.0.0=h7d8d6a5_0_cpu
+  - libarrow-substrait=22.0.0=hf865cc0_0_cpu
+  - libblas=3.9.0=35_h5709861_mkl
+  - libbrotlicommon=1.1.0=hfd05255_4
+  - libbrotlidec=1.1.0=hfd05255_4
+  - libbrotlienc=1.1.0=hfd05255_4
+  - libcblas=3.9.0=35_h2a3cdd5_mkl
+  - libclang13=21.1.3=default_ha2db4b5_0
+  - libcrc32c=1.1.2=h0e60522_0
+  - libcurl=8.16.0=h43ecb02_0
+  - libdeflate=1.24=h76ddb4d_0
+  - libevent=2.1.12=h3671451_1
+  - libexpat=2.7.1=hac47afa_0
+  - libffi=3.5.2=h52bdfb6_0
+  - libfreetype=2.14.1=h57928b3_0
+  - libfreetype6=2.14.1=hdbac1cb_0
+  - libgcc=15.2.0=h1383e82_7
+  - libglib=2.84.0=h7025463_0
+  - libgomp=15.2.0=h1383e82_7
+  - libgoogle-cloud=2.39.0=h19ee442_0
+  - libgoogle-cloud-storage=2.39.0=he04ea4c_0
+  - libgrpc=1.73.1=h317e13b_1
+  - libhwloc=2.12.1=default_h88281d1_1000
+  - libiconv=1.18=hc1393d2_2
+  - libintl=0.22.5=h5728263_3
+  - libjpeg-turbo=3.1.0=h2466b09_0
+  - liblapack=3.9.0=35_hf9ab0e9_mkl
+  - liblzma=5.8.1=h2466b09_2
+  - libparquet=22.0.0=h7051d1f_0_cpu
+  - libpng=1.6.50=h7351971_1
+  - libprotobuf=6.31.1=hdcda5b4_2
+  - libre2-11=2025.08.12=h0eb2380_1
+  - libsodium=1.0.20=hc70643c_0
+  - libsqlite=3.50.4=hf5d6505_0
+  - libssh2=1.11.1=h9aa295b_0
+  - libthrift=0.22.0=h23985f6_1
+  - libtiff=4.7.1=h550210a_0
+  - libutf8proc=2.11.0=h0b34c2f_0
+  - libwebp-base=1.6.0=h4d5522a_0
+  - libwinpthread=12.0.0.r4.gg4f2fc60ca=h57928b3_10
+  - libxcb=1.17.0=h0e4246c_0
+  - libxml2=2.13.8=h741aa76_1
+  - libxslt=1.1.43=h25c3957_0
+  - libzlib=1.3.1=h2466b09_2
+  - llvm-openmp=21.1.4=hfa2b4ca_0
+  - lz4-c=1.10.0=h2466b09_1
+  - markupsafe=3.0.3=py310hdb0e946_0
+  - matplotlib=3.10.7=py310h5588dad_0
+  - matplotlib-base=3.10.7=py310h0bdd906_0
+  - matplotlib-inline=0.1.7=pyhd8ed1ab_1
+  - mkl=2024.2.2=h57928b3_16
+  - multidict=6.6.3=py310hdb0e946_0
+  - multiprocess=0.70.16=py310h1637853_2
+  - munkres=1.1.4=pyhd8ed1ab_1
+  - nest-asyncio=1.6.0=pyhd8ed1ab_1
+  - numpy=1.26.4=py310hf667824_0
+  - openjpeg=2.5.4=h24db6dd_0
+  - openssl=3.5.4=h725018a_0
+  - orc=2.2.1=h7414dfc_0
+  - packaging=25.0=pyh29332c3_1
+  - pandas=2.3.3=py310hed136d8_1
+  - parso=0.8.5=pyhcf101f3_0
+  - patsy=1.0.2=pyhcf101f3_0
+  - pcre2=10.44=h99c9b8b_2
+  - pickleshare=0.7.5=pyhd8ed1ab_1004
+  - pillow=11.3.0=py310hb3a2f59_3
+  - pip=25.2=pyh8b19718_0
+  - pixman=0.46.4=h5112557_1
+  - platformdirs=4.5.0=pyhcf101f3_0
+  - prompt-toolkit=3.0.52=pyha770c72_0
+  - propcache=0.3.1=py310h38315fa_0
+  - psutil=7.1.1=py310h29418f3_0
+  - pthread-stubs=0.4=h0e40799_1002
+  - pure_eval=0.2.3=pyhd8ed1ab_1
+  - pyarrow=22.0.0=py310h5588dad_0
+  - pyarrow-core=22.0.0=py310hb6ca4c2_0_cpu
+  - pycparser=2.22=pyh29332c3_1
+  - pygments=2.19.2=pyhd8ed1ab_0
+  - pyparsing=3.2.5=pyhcf101f3_0
+  - pyside6=6.9.0=py310hc1b6536_0
+  - pysocks=1.7.1=pyh09c184e_7
+  - python=3.10.19=hcb012bd_1_cpython
+  - python-dateutil=2.9.0.post0=pyhe01879c_2
+  - python-gil=3.10.19=hd8ed1ab_2
+  - python-tzdata=2025.2=pyhd8ed1ab_0
+  - python-xxhash=3.6.0=py310hda3e71d_0
+  - python_abi=3.10=8_cp310
+  - pytz=2025.2=pyhd8ed1ab_0
+  - pywin32=311=py310h282bd7d_1
+  - pyyaml=6.0.3=py310hdb0e946_0
+  - pyzmq=27.1.0=py310h535538e_0
+  - qhull=2020.2=hc790b64_5
+  - qt6-main=6.9.0=h83cda92_0
+  - re2=2025.08.12=ha104f34_1
+  - requests=2.32.5=pyhd8ed1ab_0
+  - scikit-learn=1.7.2=py310h21054b0_0
+  - scikit-surprise=1.1.4=py310h4df5e4a_1
+  - scipy=1.15.2=py310h15c175c_0
+  - seaborn=0.13.2=hd8ed1ab_3
+  - seaborn-base=0.13.2=pyhd8ed1ab_3
+  - setuptools=80.9.0=pyhff2d567_0
+  - shellingham=1.5.4=pyhd8ed1ab_1
+  - six=1.17.0=pyhe01879c_1
+  - snappy=1.2.2=h7fa0ca8_0
+  - sniffio=1.3.1=pyhd8ed1ab_1
+  - stack_data=0.6.3=pyhd8ed1ab_1
+  - statsmodels=0.14.5=py310h8f3aa81_1
+  - tbb=2021.13.0=h18a62a1_3
+  - threadpoolctl=3.6.0=pyhecae5ae_0
+  - tk=8.6.13=h2c6b04d_2
+  - tornado=6.5.2=py310h29418f3_1
+  - tqdm=4.67.1=pyhd8ed1ab_1
+  - traitlets=5.14.3=pyhd8ed1ab_1
+  - typer-slim=0.20.0=pyhcf101f3_0
+  - typing-extensions=4.15.0=h396c80c_0
+  - typing_extensions=4.15.0=pyhcf101f3_0
+  - tzdata=2025b=h78e105d_0
+  - ucrt=10.0.26100.0=h57928b3_0
+  - unicodedata2=16.0.0=py310h29418f3_1
+  - urllib3=2.5.0=pyhd8ed1ab_0
+  - vc=14.3=h2b53caa_32
+  - vc14_runtime=14.44.35208=h818238b_32
+  - vcomp14=14.44.35208=h818238b_32
+  - vs2015_runtime=14.44.35208=h38c0c73_32
+  - wcwidth=0.2.14=pyhd8ed1ab_0
+  - wheel=0.45.1=pyhd8ed1ab_1
+  - win_inet_pton=1.1.0=pyh7428d3b_8
+  - xorg-libxau=1.0.12=h0e40799_0
+  - xorg-libxdmcp=1.1.5=h0e40799_0
+  - xxhash=0.8.3=hbba6f48_0
+  - yaml=0.2.5=h6a83c73_3
+  - yarl=1.22.0=py310hdb0e946_0
+  - zeromq=4.3.5=h5bddc39_9
+  - zipp=3.23.0=pyhd8ed1ab_0
+  - zstandard=0.25.0=py310h1637853_0
+  - zstd=1.5.7=hbeecb71_2
   - pip:
-    - altair
-    - xarray
-    - zarr
-    - netCDF4
-    - seaborn-image
-    - jupyterlab-git
-    - ipython
-    - black
-    - pre-commit
-    - watermark
+      - absl-py==2.3.1
+      - astunparse==1.6.3
+      - flatbuffers==25.9.23
+      - gast==0.6.0
+      - google-pasta==0.2.0
+      - grpcio==1.76.0
+      - h5py==3.15.1
+      - keras==3.12.0
+      - libclang==18.1.1
+      - markdown==3.10
+      - markdown-it-py==4.0.0
+      - mdurl==0.1.2
+      - ml-dtypes==0.5.3
+      - namex==0.1.0
+      - opencv-python==4.12.0.88
+      - opt-einsum==3.4.0
+      - optree==0.17.0
+      - protobuf==6.33.0
+      - rich==14.2.0
+      - tensorboard==2.20.0
+      - tensorboard-data-server==0.7.2
+      - tensorflow==2.20.0
+      - termcolor==3.2.0
+      - werkzeug==3.1.3
+      - wrapt==2.0.0
+      - xgboost==3.1.2
+
